<resources>
    <string name="app_name">ClockNote App</string>
    <string name="versi_1_0">Versi 1.0</string>
    <string name="clock_indicator">00:00</string>
    <string name="tidak_ada_catatan">Tidak Ada Catatan</string>
    <string name="tambah_catatan"><u>Tambah Catatan</u></string>
    <string name="wib">WIB</string>
    <string name="_00_january_0000">00 January 0000</string>
    <string name="palembang_indonesia">Palembang, Indonesia</string>
    <string name="tulis_catatan_disini">Tulis catatan disini</string>
    <string name="cancel">Batal</string>
    <string name="selesai">Selesai</string>
</resources>