<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".DialogNote">

    <TextView
        android:id="@+id/noteTitle"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/kalam_bold"
        android:text="Tambah Catatan"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/createNote"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#43C148"
        android:fontFamily="@font/kalam"
        android:hint="@string/tulis_catatan_disini"
        android:inputType="textPersonName"
        android:maxLength="100"
        android:textCursorDrawable="@null"
        android:theme="@style/Theme2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noteTitle" />

    <Button
        android:id="@+id/bBatal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="#00FFFFFF"
        android:fontFamily="@font/kalam_bold"
        android:text="@string/cancel"
        android:textColor="#000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createNote" />

    <Button
        android:id="@+id/bSelesai"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="220dp"
        android:background="#00FFFFFF"
        android:fontFamily="@font/kalam_bold"
        android:text="@string/selesai"
        android:textColor="#000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/bBatal"
        app:layout_constraintTop_toBottomOf="@+id/createNote" />

    <TextView
        android:id="@+id/textHasil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" "
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>